--- a/cookbooks/sphinx/templates/default/sphinx.monitrc.erb
+++ b/cookbooks/sphinx/templates/default/sphinx.monitrc.erb
@@ -1,5 +1,5 @@
 check process sphinx_<%= @app_name %>
-  with pidfile /data/<%= @app_name %>/shared/log/<%= @environment %>.sphinx.pid
+  with pidfile <%= @pid_file %>
   start program = "/usr/bin/searchd --pidfile --config /data/<%= @app_name %>/current/config/<%= @environment %>.sphinx.conf" as uid <%= @user %> and gid <%= @user %>
-  stop program = "/usr/bin/killall searchd" as uid <%= @user %> and gid <%= @user %>
+  stop program = "/usr/bin/searchd --stopwait --config /data/<%= @app_name %>/current/config/<%= @environment %>.sphinx.conf" as uid <%= @user %> and gid <%= @user %>
   group sphinx_<%= @app_name %>
